# edge-endpoint

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .snyk  .yamllint.yaml  ARCHITECTURE.md  CONFIGURE-DETECTORS.md  CONFIGURING-DETECTORS.md  DETECTOR-VRAM-USAGE-SPEC.md  Dockerfile  Dockerfile.app  Dockerfile.model_updater  Dockerfile.redacted  ESCALATION-QUEUE.md  INSTALL-JETSON.md  LICENSE  Makefile  NETWORK-REQUIREMENTS.md  README.md  THIRD_PARTY_LICENSES.md  agent_findings.txt  balena.yml  connection_test.py  deploy_balena.sh  docker-compose-gpu.yml  docker-compose.yml  edge.yaml  edge_queue_test.py  generate_load.py  get_config.py  groundlight-edge-endpoint-0.7.0.tgz  groundlight-edge-endpoint-0.7.1.tgz  index.html  index.yaml  k3s.yaml  nginx.conf  nginx.conf.j2  nginx.conf.template  optimization_playbook.md  (+8 more)
.github/: .yamllint.yaml  CODEOWNERS  actionlint.yaml  reviewer-lottery.yml
.github/workflows/: .yamllint.yaml  auto-assign.yaml  auto-format.yaml  build-push-ee-image.yaml  deploy-balena.yaml  deploy-glhub.yaml  diskcheck.yaml  k3s-pipeline.yaml  pipeline.yaml  pipeline_test.yaml  sweeper-eeut.yaml  test-k3s-helm.yaml  update-glhub.yaml  validate-workflow-files.yaml
app/: launch-ee.sh  main.py
app/api/: api.py  naming.py  remote.py
app/core/: app_state.py  configs.py  constants.py  database.py  deviceid.py  edge_config_loader.py  edge_config_manager.py  edge_detector_manager.py  edge_inference.py  file_paths.py  groundlight_client.py  image_utils.py  inference_image.py  iqe_cache.py  kubernetes_management.py  models.py  motion_detection.py  naming.py  speedmon.py  sync_database.py  utils.py
app/db/: _compare_schema.py  crud.py  database.py  manager.py  models.py
app/escalation_queue/: constants.py  dropped_escalations.py  failed_escalations.py  image_retention.py  manage_reader.py  models.py  queue_reader.py  queue_retention.py  queue_utils.py  queue_writer.py  request_cache.py
app/metrics/: README.md  gpu_metrics.py  iq_activity.py  iqactivity.py  metric_reporting.py  metricreporting.py  resource_metrics.py  system_metrics.py  vram_metrics.py
app/model_updater/: update_models.py
app/profiling/: README.md  __init__.py  config.py  context.py  dashboard.py  data_loader.py  instrumentation.py  manager.py  middleware.py  models.py  tracer.py
app/resources/: config_template.pbtxt  model_template.py
app/schemas/: image_queries.py  ping.py  schemas.py
app/status_monitor/: status_web.py
app/utils/: loghelper.py  splunk_handler.py
benchmarking/: .gitignore  measure_detector_resource_utilization.py  pyproject.toml
canaries/: README.md
canaries/generate_load/: alerts.py  install_cron.sh  run.py  run_cron.sh
certificates/: generate_tls_cert.sh  openssl-custom.cnf
certs/: generate-tls-cert.sh  openssl-custom.cnf
cicd/edge-canaries/: README.md
cicd/pulumi/: .envrc  .gitignore  Pulumi.yaml  README.md  __main__.py  fabfile.py  pyproject.toml  ssh-to-eeut.sh  (+3 more)
code-quality/: format  lint
configs/: edge-config.yaml  edge.yaml  get_config.py  nginx.conf  nginx.conf.j2  nginx2.conf
database/: Dockerfile  build_database_image.sh  start.py  start_db.sh
deploy/: README.md  install-k3s.sh  install_k3s.sh  make-aws-secret.sh  make-gl-api-token-secret.sh  push-edge-endpoint-image.sh  push_edge_endpoint_image.sh
docs/: OPENTELEMETRY_INTEGRATION.md  SPLUNK_INTEGRATION.md
generate_load/: generate_load.py  requirements.txt  utils.py
images/: README.md
licenses/: NOTICE  THIRD_PARTY_LICENSES.md
load-testing/: .gitignore  README.md  benchmark_pipelines.example.yaml  benchmark_pipelines.yaml  compare_edge_cloud_inference.py  config.py  constants.py  diagnose_edge_cloud_inference.py  fresh_pod_readiness_test.py  generate_repeated_rollouts.py  groundlight_helpers.py  image_helpers.py  load_test.py  measure_detector_resource_utilization.py  measure_ram_and_vram_usage.py  memory_pressure_test.py  monitor_cpu_gpu_usage.py  multiple_client_throughput_test.py  parse_load_test_logs.py  parse_usage_logs.py  plot_ram_and_vram_usage.py  plot_resource_benchmark.py  plot_resource_breakdown.py  post_set_config_inference_readiness_test.py  pyproject.toml  rollouts_under_inference_load.py  simple_ee_test.py  single_client_fps_test.py  system_helpers.py  utils.py
load-testing/app_benchmark/: README.md  __init__.py  __main__.py  cleanup_edge.py  cleanup_orphans.py  cli.py  client.py  config.py  constants.py  detectors.py  environment.py  host_check.py  image_loader.py  ipc.py  lenses.py  logging_setup.py  metrics_writer.py  monitor.py  network.py  report.py  supervisor.py  verification.py
load-testing/app_benchmark/configs/: example.yaml  example_3lens.yaml  known_pipelines.md  smoke_test.yaml  two_lens_2k.yaml
load-testing/app_benchmark/tests/: test_client.py  test_config_schema.py  test_image_loader.py
load-testing/inference_speed/: inference_speed.py  main.py  pyproject.toml
load-testing/memory-pressure-test/: README.md  generate-repeated-rollouts.py  memory_pressure_test.py  pyproject.toml  utils.py
load-testing/network-chaos/: README.md  disable_outage_linux.sh  enable_outage_linux.sh
load-testing/rollout-test/: README.md  constant_inference_and_labels.py  generate_repeated_rollouts.py  pyproject.toml
load-testing/tests/: test_measure_ram_and_vram_usage.py
load-testing/toxiproxy/: README.md  add_outage_toxic.sh  disable_latency.sh  disable_outage.sh  disable_toxiproxy.sh  enable_outage.sh  enable_toxiproxy.sh  flap_outage.sh  k8s-toxiproxy.yaml  remove_outage_toxic.sh  status.sh  toxiproxy.yaml
load-testing/utils/: __init__.py  utils.py
model_updater/: Dockerfile  update_models.py
security/: nginx_ed25519.crt  nginx_ed25519.key
specs/: 0001-tls-support.md
splunk/: indexes.conf
status-page-react/: index.html  package.json  vite.config.js
test/: conftest.py  parsing.py  setup_inference_test_env.sh  setup_k3s_test_environment.sh  setup_k3s_test_environment_2.sh  setup_motion_detection_test_env.sh  setup_plain_test_env.sh  setup_test_env.sh  validate_setup_ee.sh  validate_setup_helm.sh
unused-network-hooks/: README.md
(+256 files in other folders)
