[tool.poetry]
name = "groundlight-edge"
version = "0.1.0"
description = "Run groundlight on the edge!"
authors = ["Groundlight AI <support@groundlight.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {version = "^0.20.0", extras = ["standard"]}
fastapi = "^0.88.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.0"
requests = "^2.28.1"
pre-commit = "^2.20.0"
httpx = "^0.23.1"
flake8 = "^6.0.0"
isort = "^5.11.3"
autoflake = "^2.0.0"

[tool.poetry.group.lint.dependencies]
pylint = "^2.15.9"
black = "^23.3.0"
mypy = "^1.2.0"
ruff = "^0.0.261"
toml-sort = "^0.23.0"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 120
preview = true
target-version = ["py37"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
select = ["E", "F", "I", "N", "PL"] # shorthand names for plugins
target-version = "py37"

# https://toml-sort.readthedocs.io/en/latest/#configuration-file
[tool.tomlsort]
no_sort_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
