[tool.poetry]
name = "groundlight-edge"
version = "0.1.0"
description = "Run groundlight on the edge!"
authors = ["Groundlight AI <support@groundlight.ai>"]
license = "MIT"

[tool.poetry.dependencies]
APScheduler = "3.10.4"
cachetools = "^5.3.1"
fastapi = "^0.115.0"
framegrab = "^0.5.0"
groundlight = ">=0.21.0, <0.22.0"
httpx = "^0.27.2"
jinja2 = "^3.1.5"
kubernetes = "^27.2.0"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
pydantic = "^2.9.2"
python = "^3.10"
pyyaml = "^6.0.2"
SQLAlchemy = "2.0.35"
svix-ksuid = "^0.6.2"
uvicorn = {version = "^0.31.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
requests = "^2.32.3"
gputil = "^1.4.0"
psutil = "^6.0.0"
matplotlib = "^3.9.2"

[tool.poetry.group.lint.dependencies]
autoflake = "^2.3.1"
black = "^24.3.0"
flake8 = "^6.0.0"
isort = "^5.11.3"
mypy = "^1.2.0"
pylint = "^2.15.9"
ruff = "^0.0.291"
toml-sort = "^0.23.0"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 120
preview = true
target-version = ["py310"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
select = ["E", "F", "I", "N", "PL"] # shorthand names for plugins
target-version = "py310"

# https://toml-sort.readthedocs.io/en/latest/#configuration-file
[tool.tomlsort]
no_sort_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
