[project]
name = "groundlight-edge"
version = "0.1.0"
description = "Run Groundlight on the edge!"
authors = [
    {name = "Groundlight AI", email = "support@groundlight.ai"},
]
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "APScheduler==3.10.4",
    "SQLAlchemy==2.0.35",
    "cachetools>=5.3.1,<6.0.0",
    "fastapi>=0.115.0,<0.116.0",
    "groundlight>=0.25.0,<0.26.0",
    "httpx>=0.27.2,<0.28.0",
    "jinja2>=3.1.6,<4.0.0",
    "kubernetes>=27.2.0,<28.0.0",
    "pillow>=11.3.0,<12.0.0",
    "psutil>=6.0.0,<7.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "svix-ksuid>=0.6.2,<0.7.0",
    "uvicorn[standard]>=0.31.0,<0.32.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1,<8.0.0",
    "gputil>=1.4.0,<2.0.0",
    "pre-commit>=3.8.0,<4.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.1,<4.0.0",
    "requests>=2.32.3,<3.0.0",
]
# Optional group: install with `uv sync --group profiling` to use the profiling
# dashboard (app/profiling/dashboard.py). Kept out of the default install so
# developers who don't use the dashboard don't pay the ~50MB cost.
profiling = [
    "marimo>=0.23.0,<0.24.0",
    "plotly>=6.0,<7.0",
]
lint = [
    "autoflake>=2.3.1,<3.0.0",
    "black>=24.3.0,<25.0.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.11.3,<6.0.0",
    "mypy>=1.2.0,<2.0.0",
    "pylint>=2.15.9,<3.0.0",
    "ruff>=0.0.291,<0.0.292",
    "toml-sort>=0.23.0,<0.24.0",
]

[tool.uv]
default-groups = ["dev", "lint"]
package = false

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 120
preview = true
target-version = ["py310"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
select = ["E", "F", "I", "N", "PL"] # shorthand names for plugins
target-version = "py310"

# https://toml-sort.readthedocs.io/en/latest/#configuration-file
[tool.tomlsort]
no_sort_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.pytest.ini_options]
testpaths = ["test"]
