[project]
name = "load-testing"
version = "0.1.0"
description = "Scripts for testing the performance of the Groundlight Edge Endpoint"
requires-python = ">=3.13"
dependencies = [
    "groundlight>=0.26.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "psutil>=5.9.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.18.0",
    "setuptools>=75.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
